--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -57,6 +57,7 @@ textarea:focus, input:focus, .uneditable-input:focus {
 .overlay {
 	display:none;
 	position:fixed;
+	top: -0px;
 	width:100%;
 	height:100%;
 	z-index: 1000;
@@ -231,4 +232,51 @@ small .g-recaptcha {
 
 .modal {
 	z-index: 1241 !important;
+}
+
+.modal-body {
+    max-height: calc(100vh - 210px);
+    overflow-y: auto;
+}
+
+.com_loading {
+	width:200px;
+	padding:15px;
+	margin: 0 auto;
+	position: fixed;
+    top: 50%;
+    right: 43%;
+	font-family:tahoma;
+	font-size:18px;
+
+	z-index: 999;
+	
+	background: #ffffff; /* Old browsers */
+	background: -webkit-linear-gradient(top, #ffffff 0%,#f3f3f3 89%,#f9f9f9 100%); /* Chrome10+,Safari5.1+ */
+	background:    -moz-linear-gradient(top, #ffffff 0%,#f3f3f3 89%,#f9f9f9 100%); /* FF3.6+ */
+	background:     -ms-linear-gradient(top, #ffffff 0%,#f3f3f3 89%,#f9f9f9 100%); /* IE10+ */
+	background:      -o-linear-gradient(top, #ffffff 0%,#f3f3f3 89%,#f9f9f9 100%); /* Opera 11.10+ */
+	background:         linear-gradient(top, #ffffff 0%,#f3f3f3 89%,#f9f9f9 100%); /* W3C */
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#f9f9f9',GradientType=0 ); /* IE6-9 */
+	
+	opacity: 0.95;
+
+	border: 1px solid black;
+	border: 1px solid rgba(0, 0, 0, 0.5);
+	
+	-webkit-box-shadow: 0 3px 7px rgba(0, 0, 0, 0.5);
+	   -moz-box-shadow: 0 3px 7px rgba(0, 0, 0, 0.5);
+	    -ms-box-shadow: 0 3px 7px rgba(0, 0, 0, 0.5);
+	     -o-box-shadow: 0 3px 7px rgba(0, 0, 0, 0.5);
+	        box-shadow: 0 3px 7px rgba(0, 0, 0, 0.5);
+
+}
+
+#loading_wrap{
+	display:none;
+}
+
+
+.mentionned {
+	background-color:#dedede;
 }
